# rust-synth-example

./: Cargo.toml  README.md
synth/: Cargo.toml
synth/src/: lib.rs  notes.rs  waves.rs
tui/: Cargo.toml
tui/src/: input.rs  main.rs  terminal.rs  ui.rs
