[package]
name = "tui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
crossbeam-channel = "0.5.8"
crossterm = "0.27.0"
ratatui = "0.23.0"
synth = { version = "0.1.0", path = "../synth" }
